fix:- footer align and position

--- a/styles/header/header.css
+++ b/styles/header/header.css
@@ -349,6 +349,7 @@ footer h4 {
   font-weight: normal;
   padding-top: 30px;
   padding-bottom: 30px;
+  padding-left: 20px;
 }
 .Copyright a{
   font-family: 'Poppins', sans-serif;
